// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdditionalMetadata Fields Display all fields 1`] = `
<div
  className="collapsible-card pgn_collapsible mt-4"
>
  <div
    className="collapsible-body"
  >
    <FieldLabel
      className="h3 font-weight-normal mb-3"
      extraText=""
      helpText=""
      id={null}
      optional={false}
      text="Additional Metadata Details"
    />
    <div
      className="mb-3 mt-1"
    >
      <Field
        className="float-left mt-1 ml-1"
        component="input"
        disabled={false}
        label="additional_metadata.display_on_org_page"
        name="additional_metadata.display_on_org_page"
        required={true}
        type="checkbox"
      />
      <FieldLabel
        className="font-weight-normal ml-2 float-left"
        extraText=""
        helpText=""
        id={null}
        optional={false}
        text="Display on Organization Page"
      />
      <br />
    </div>
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="external_url.label"
          optional={false}
          text="External landing page URL"
        />
      }
      name="additional_metadata.external_url"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="external_identifier.label"
          optional={false}
          text="External system identifier"
        />
      }
      name="additional_metadata.external_identifier"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="lead_capture_form_url.label"
          optional={false}
          text="Lead capture form url"
        />
      }
      name="additional_metadata.lead_capture_form_url"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="organic_url.label"
          optional={false}
          text="Organic URL"
        />
      }
      name="additional_metadata.organic_url"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="variant_id.label"
          optional={false}
          text="Course Variant Id"
        />
      }
      name="additional_metadata.variant_id"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText={
            <div>
              <dl>
                <dt>
                  Course Term
                </dt>
                <dd>
                  For example, in the UK universities use programme instead of course, so you can define which term you want to use in course description to keep the consistency.
                </dd>
              </dl>
            </div>
          }
          id="course_term_override.label"
          optional={false}
          text="Course Term Override"
        />
      }
      name="additional_metadata.course_term_override"
      required={true}
    />
    <FieldLabel
      className="h3 font-weight-normal"
      extraText=""
      helpText=""
      id={null}
      optional={false}
      text="Fact 1"
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="facts.heading"
          optional={false}
          text="Heading"
        />
      }
      name="additional_metadata.facts_1_heading"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="facts.blurb"
          optional={false}
          text="Description"
        />
      }
      name="additional_metadata.facts_1_blurb"
      required={true}
    />
    <FieldLabel
      className="h3 font-weight-normal"
      extraText=""
      helpText=""
      id={null}
      optional={false}
      text="Fact 2"
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="facts.heading"
          optional={false}
          text="Heading"
        />
      }
      name="additional_metadata.facts_2_heading"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="facts.blurb"
          optional={false}
          text="Description"
        />
      }
      name="additional_metadata.facts_2_blurb"
      required={true}
    />
    <FieldLabel
      className="h3 font-weight-normal"
      extraText=""
      helpText=""
      id={null}
      optional={false}
      text="Certificate Information"
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="certificate-info.heading"
          optional={false}
          text="Heading"
        />
      }
      name="additional_metadata.certificate_info_heading"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="certificate-info.blurb"
          optional={false}
          text="Description"
        />
      }
      name="additional_metadata.certificate_info_blurb"
      required={true}
    />
    <Field
      component={[Function]}
      dateLabel="Start Date"
      disabled={false}
      name="additional_metadata.start_date"
      required={true}
      timeLabel="Start Time (UTC)"
      type="date"
      utcTimeZone={true}
    />
    <Field
      component={[Function]}
      dateLabel="End Date"
      disabled={false}
      name="additional_metadata.end_date"
      required={true}
      timeLabel="End Time (UTC)"
      type="date"
      utcTimeZone={true}
    />
    <Field
      component={[Function]}
      dateLabel="Registration Deadline Date"
      disabled={false}
      name="additional_metadata.registration_deadline"
      required={true}
      timeLabel="Registration Deadline Time (UTC)"
      type="date"
      utcTimeZone={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="product_status.label"
          optional={false}
          text="Product Status"
        />
      }
      name="additional_metadata.product_status"
      options={
        Array [
          Object {
            "label": "Select a product status",
            "value": "",
          },
          Object {
            "label": "Published",
            "value": "published",
          },
          Object {
            "label": "Archived",
            "value": "Archived",
          },
        ]
      }
      required={true}
      value="additional_metadata.product_status"
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="external_course_marketing_type.label"
          optional={false}
          text="External Product Marketing Type"
        />
      }
      name="additional_metadata.external_course_marketing_type"
      options={
        Array [
          Object {
            "label": "Select a marketing type",
            "value": "",
          },
          Object {
            "label": "Sprint",
            "value": "sprint",
          },
          Object {
            "label": "Short Course",
            "value": "short_course",
          },
        ]
      }
      required={true}
      value="additional_metadata.external_course_marketing_type"
    />
    <FieldLabel
      className="h3 font-weight-normal"
      extraText=""
      helpText=""
      id={null}
      optional={false}
      text="Product Meta"
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="product_meta.title"
          optional={false}
          text="Title"
        />
      }
      name="additional_metadata.product_meta_title"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="product_meta.description"
          optional={true}
          text="Description"
        />
      }
      name="additional_metadata.product_meta_description"
      optional={true}
    />
    <Field
      component={[Function]}
      createOptionValidator={[Function]}
      defaultValue={Array []}
      disabled={false}
      isAsync={true}
      isCreatable={true}
      isMulti={true}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText={
            <div>
              <dl>
                <dt>
                  Keywords
                </dt>
                <dd>
                  Enter SEO Meta tags for Products. Separate keywords with spaces.
                </dd>
              </dl>
            </div>
          }
          id="additional_metadata.product_meta_keywords"
          optional={true}
          text="Keywords"
        />
      }
      loadOptions={[Function]}
      name="additional_metadata.product_meta_keywords"
      optional={true}
    />
  </div>
</div>
`;

exports[`AdditionalMetadata Fields Display required fields on the basis of external course marketing type 1`] = `
<div
  className="collapsible-card pgn_collapsible mt-4"
>
  <div
    className="collapsible-body"
  >
    <FieldLabel
      className="h3 font-weight-normal mb-3"
      extraText=""
      helpText=""
      id={null}
      optional={false}
      text="Additional Metadata Details"
    />
    <div
      className="mb-3 mt-1"
    >
      <Field
        className="float-left mt-1 ml-1"
        component="input"
        disabled={false}
        label="additional_metadata.display_on_org_page"
        name="additional_metadata.display_on_org_page"
        required={true}
        type="checkbox"
      />
      <FieldLabel
        className="font-weight-normal ml-2 float-left"
        extraText=""
        helpText=""
        id={null}
        optional={false}
        text="Display on Organization Page"
      />
      <br />
    </div>
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="external_url.label"
          optional={false}
          text="External landing page URL"
        />
      }
      name="additional_metadata.external_url"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="external_identifier.label"
          optional={false}
          text="External system identifier"
        />
      }
      name="additional_metadata.external_identifier"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="lead_capture_form_url.label"
          optional={false}
          text="Lead capture form url"
        />
      }
      name="additional_metadata.lead_capture_form_url"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="organic_url.label"
          optional={false}
          text="Organic URL"
        />
      }
      name="additional_metadata.organic_url"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="variant_id.label"
          optional={false}
          text="Course Variant Id"
        />
      }
      name="additional_metadata.variant_id"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText={
            <div>
              <dl>
                <dt>
                  Course Term
                </dt>
                <dd>
                  For example, in the UK universities use programme instead of course, so you can define which term you want to use in course description to keep the consistency.
                </dd>
              </dl>
            </div>
          }
          id="course_term_override.label"
          optional={false}
          text="Course Term Override"
        />
      }
      name="additional_metadata.course_term_override"
      required={true}
    />
    <FieldLabel
      className="h3 font-weight-normal"
      extraText=""
      helpText=""
      id={null}
      optional={false}
      text="Fact 1"
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="facts.heading"
          optional={false}
          text="Heading"
        />
      }
      name="additional_metadata.facts_1_heading"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="facts.blurb"
          optional={false}
          text="Description"
        />
      }
      name="additional_metadata.facts_1_blurb"
      required={true}
    />
    <FieldLabel
      className="h3 font-weight-normal"
      extraText=""
      helpText=""
      id={null}
      optional={false}
      text="Fact 2"
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="facts.heading"
          optional={false}
          text="Heading"
        />
      }
      name="additional_metadata.facts_2_heading"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="facts.blurb"
          optional={false}
          text="Description"
        />
      }
      name="additional_metadata.facts_2_blurb"
      required={true}
    />
    <FieldLabel
      className="h3 font-weight-normal"
      extraText=""
      helpText=""
      id={null}
      optional={false}
      text="Certificate Information"
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="certificate-info.heading"
          optional={false}
          text="Heading"
        />
      }
      name="additional_metadata.certificate_info_heading"
      required={false}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="certificate-info.blurb"
          optional={false}
          text="Description"
        />
      }
      name="additional_metadata.certificate_info_blurb"
      required={false}
    />
    <Field
      component={[Function]}
      dateLabel="Start Date"
      disabled={false}
      name="additional_metadata.start_date"
      required={true}
      timeLabel="Start Time (UTC)"
      type="date"
      utcTimeZone={true}
    />
    <Field
      component={[Function]}
      dateLabel="End Date"
      disabled={false}
      name="additional_metadata.end_date"
      required={true}
      timeLabel="End Time (UTC)"
      type="date"
      utcTimeZone={true}
    />
    <Field
      component={[Function]}
      dateLabel="Registration Deadline Date"
      disabled={false}
      name="additional_metadata.registration_deadline"
      required={true}
      timeLabel="Registration Deadline Time (UTC)"
      type="date"
      utcTimeZone={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="product_status.label"
          optional={false}
          text="Product Status"
        />
      }
      name="additional_metadata.product_status"
      options={
        Array [
          Object {
            "label": "Select a product status",
            "value": "",
          },
          Object {
            "label": "Select a product status",
            "value": "",
          },
          Object {
            "label": "Published",
            "value": "published",
          },
          Object {
            "label": "Archived",
            "value": "Archived",
          },
        ]
      }
      required={true}
      value="additional_metadata.product_status"
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="external_course_marketing_type.label"
          optional={false}
          text="External Product Marketing Type"
        />
      }
      name="additional_metadata.external_course_marketing_type"
      options={
        Array [
          Object {
            "label": "Select a marketing type",
            "value": "",
          },
          Object {
            "label": "Select a marketing type",
            "value": "",
          },
          Object {
            "label": "Sprint",
            "value": "sprint",
          },
          Object {
            "label": "Short Course",
            "value": "short_course",
          },
        ]
      }
      required={true}
      value="additional_metadata.external_course_marketing_type"
    />
    <FieldLabel
      className="h3 font-weight-normal"
      extraText=""
      helpText=""
      id={null}
      optional={false}
      text="Product Meta"
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="product_meta.title"
          optional={false}
          text="Title"
        />
      }
      name="additional_metadata.product_meta_title"
      required={true}
    />
    <Field
      component={[Function]}
      disabled={false}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText=""
          id="product_meta.description"
          optional={true}
          text="Description"
        />
      }
      name="additional_metadata.product_meta_description"
      optional={true}
    />
    <Field
      component={[Function]}
      createOptionValidator={[Function]}
      defaultValue={Array []}
      disabled={false}
      isAsync={true}
      isCreatable={true}
      isMulti={true}
      label={
        <FieldLabel
          className=""
          extraText=""
          helpText={
            <div>
              <dl>
                <dt>
                  Keywords
                </dt>
                <dd>
                  Enter SEO Meta tags for Products. Separate keywords with spaces.
                </dd>
              </dl>
            </div>
          }
          id="additional_metadata.product_meta_keywords"
          optional={true}
          text="Keywords"
        />
      }
      loadOptions={[Function]}
      name="additional_metadata.product_meta_keywords"
      optional={true}
    />
  </div>
</div>
`;
